<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#542437"
    android:orientation="vertical"  >
    
     <!-- <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-5819132225601729/7100929091" /> -->
     
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:background="#542437"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/game_over"
            android:textSize="30sp"
            android:textColor="#D95B43" />

        <TextView
            android:id="@+id/tvGameOverType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#D95B43" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtScore"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ECD078" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/dialog_button_start_over"
            style="@style/btnStyleOrange"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/game_over_play_again" />

        <Button
            android:id="@+id/dialog_button_ok"
            style="@style/btnStyleOrange"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/game_over_main" />
    </LinearLayout>
    
    <LinearLayout android:id="@+id/win_screen_sign_in_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#53777A"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:visibility="gone">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/win_screen_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_upload_this_score"
            android:layout_marginLeft="10dp"
            android:textColor="#ECD078"
            />
    </LinearLayout>

    <TextView android:id="@+id/win_screen_signed_in_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#53777A"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone"
        android:gravity="center|left"
        android:textColor="#ECD078"
        android:text="@string/you_are_signed_in" />

</LinearLayout>